# LabaTP-1-2-4-5

1laba/: Correlation.cpp  Graduation.cpp  Temperature.cpp  helloworld.cpp  multiplication table.cpp
2laba/: Correlation.cpp  CorrelationTemp.cpp  Temperature.cpp  Temperature2.cpp  Temperature3.cpp
2laba/test/: trycatchexample.cpp
4laba/: proj4laba.cbp  svsp.cpp
5laba/: CMakeCache.txt  CMakeLists.txt  CppCheckResults.xml  Doxyfile.txt  Makefile  Makefile.handmade  cmake_install.cmake  gmon.out  lab05.bat  main.cpp  make.bat  svsp.cbp  svsp.depend  svsp.h  svsp.layout
5laba/doxygen/: doxyfile
